<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_top"
    tools:context=".activity.RegisterActivity">


    <TextView
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/text_large"
        />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/passwordNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="@dimen/text_size"
        android:inputType="textPassword"
        android:textColor="@android:color/black" />

    <EditText
        android:inputType="textPassword"
        android:id="@+id/confirmPasswordNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black" />


    <Button
        android:textSize="@dimen/text_large"
        android:textAllCaps="false"
        android:text="Register"
        android:textColor="@android:color/black"
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        />

</LinearLayout>